implement GetMembershipEventByOrderID api
